# andrii

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release-build.yml
benchmarks/results/: solid-poc.json  summary.csv  summary.json
benchmarks/results/raw/: andrii_documents_mixed_balanced_r1.json  andrii_documents_mixed_fast_r1.json  andrii_documents_mixed_maximum-v2_r1.json  andrii_documents_mixed_maximum_r1.json  andrii_incompressible_media_like_balanced_r1.json  andrii_incompressible_media_like_fast_r1.json  andrii_incompressible_media_like_maximum-v2_r1.json  andrii_incompressible_media_like_maximum_r1.json  andrii_large_binary_1gb_balanced_r1.json  andrii_large_binary_1gb_fast_r1.json  andrii_large_binary_1gb_maximum-v2_r1.json  andrii_large_binary_1gb_maximum_r1.json  andrii_many_small_files_balanced_r1.json  andrii_many_small_files_fast_r1.json  andrii_many_small_files_maximum-v2_r1.json  andrii_many_small_files_maximum_r1.json  andrii_mixed_realistic_balanced_r1.json  andrii_mixed_realistic_fast_r1.json  andrii_mixed_realistic_maximum-v2_r1.json  andrii_mixed_realistic_maximum_r1.json  andrii_source_code_balanced_r1.json  andrii_source_code_fast_r1.json  andrii_source_code_maximum-v2_r1.json  andrii_source_code_maximum_r1.json  andrii_text_small_balanced_r1.json  andrii_text_small_fast_r1.json  andrii_text_small_maximum-v2_r1.json  andrii_text_small_maximum_r1.json
crates/andrii-compress/: Cargo.toml
crates/andrii-compress/src/: error.rs  lib.rs
crates/andrii-core/: Cargo.toml
crates/andrii-core/examples/: benchmark.rs  solid_poc.rs
crates/andrii-core/src/: error.rs  lib.rs
crates/andrii-core/src/archive/: mod.rs  reader.rs  verifier.rs  writer.rs
crates/andrii-core/src/format/: entry.rs  header.rs  mod.rs
crates/andrii-core/tests/: integration.rs  v3_solid.rs
crates/andrii-core/tests/fixtures/: compressible.txt  hello.txt
crates/andrii-crypto/: Cargo.toml
crates/andrii-crypto/src/: cipher.rs  error.rs  hash.rs  kdf.rs  lib.rs  password.rs
docs/: ANDRII_01E_VISUAL_PLAN.md  ANDRII_01F_HANDDRAWN_IDENTITY_PLAN.md  ANDRII_02A_PRODUCT_MATURITY.md  ANDRII_02B_FLOW_ARCHITECTURE.md  ANDRII_02C_FLOW_DEPTH.md  ANDRII_03A_IDENTITY_LAYER.md  ANDRII_03B_VAULT_COMPONENT.md  ANDRII_03C_OBJECT_MODEL.md  ANDRII_03D_PERSISTENCE_MODEL.md  ANDRII_04A_TRUST_LAYER.md  ANDRII_04B_FINALIZATION.md  ANDRII_04C_SYSTEM.md  ANDRII_05A_INEVITABILITY.md  ANDRII_05B_CONTROLLED_INEVITABILITY.md  ANDRII_06A_PERCEPTUAL_CONVERGENCE.md  ANDRII_06B_RUNTIME_CONVERGENCE.md  ANDRII_06C_CONTROL_AFFORDANCE.md  ANDRII_07A_PRODUCT_FREEZE.md  ANDRII_FORMAT_SPEC.md  ANDRII_HARDENING.md  ANDRII_V3_FORMAT_PROPOSAL.md  ARCHITECTURE.md  AUTO_UPDATE_PLAN.md  BENCHMARKS.md  BENCHMARK_REPORT.md  BENCHMARK_WEBSITE_SUMMARY.md  COMPRESSION_DIAGNOSIS_01.md  LINUX_RELEASE_NOTES.md  PERFORMANCE_AUDIT_01.md  RELEASE_BUILD_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_MATRIX.md  RELEASE_SECURITY_NOTES.md  ROADMAP.md  SECURITY.md  SOLID_MODE_FEASIBILITY.md  UX_AUDIT_01B.md
docs/testing/: ANDRII_01A_ACCEPTANCE.md  ANDRII_01C_WINDOWS_EXE_ACCEPTANCE.md
scripts/: benchmark-andrii.mjs  verify-release-artifacts.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  archive.rs  mod.rs  password.rs
src/components/: ArchiveProgress.tsx  FileDropzone.tsx  FileTable.tsx  Layout.tsx  Onboarding.tsx  PasswordGenerator.tsx  PasswordStrength.tsx  RecentArchives.tsx  SecurityReport.tsx  Settings.tsx  TitleBar.tsx  Vault.tsx  useProgressEta.ts
src/components/art/: index.tsx
src/i18n/: de.json  en.json  es.json  fr.json  hy.json  index.tsx  ru.json  uk.json
src/lib/: errors.ts  extensions.ts  storage.ts
src/pages/: CreateArchive.tsx  Home.tsx  OpenArchive.tsx  Settings.tsx  VerifyArchive.tsx
src/styles/: globals.css
src/types/: index.ts
src/vault/: object.ts
