[package]
name = "andrii-core"
version.workspace = true
edition.workspace = true
description = "Core archive format implementation for ANDRII"

[dependencies]
andrii-crypto = { workspace = true }
andrii-compress = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
