[package]
name = "andrii-crypto"
version.workspace = true
edition.workspace = true
description = "Cryptographic primitives for the ANDRII archive format"

[dependencies]
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"
